--- a/views/new_hand/1.pug
+++ b/views/new_hand/1.pug
@@ -9,20 +9,20 @@ block content
                 td
                     label(for="pcount") Players at the table:
                 td
-                    input(id="pcount", type="number", title="Player count", name="playercount", value="9")
+                    input(id="pcount", type="number", title="Player count", name="handinfo[playercount]", value="9")
             tr
                 td
                     label(for="smallblind") Small blind:
                 td
-                    input(id="smallblind", type="number", title="Small blind", name="smallblind", value="25")
+                    input(id="smallblind", type="number", title="Small blind", name="handinfo[smallblind]", value="25")
             tr
                 td
                     label(for="bigblind") Big blind:
                 td
-                    input(id="bigblind", type="number", title="Player count", name="bigblind", value="50")
+                    input(id="bigblind", type="number", title="Player count", name="handinfo[bigblind]", value="50")
             tr
                 td
                     label(for="ante") Ante:
                 td
-                    input(id="ante", type="number", title="Player count", name="ante", value="0")
+                    input(id="ante", type="number", title="Player count", name="handinfo[ante]", value="0")
         input(type="submit", value="Submit")
