--- a/views/new_hand/2.pug
+++ b/views/new_hand/2.pug
@@ -17,19 +17,14 @@ block content
                     td Stack?
                     td Button?
             tbody
-                tr
-                    td
-                        input(type="text", name="handinfo[players][0][name]", value="Player_1")
-                    td
-                        input(type="text", name="handinfo[players][0][stack]", value="1100")
-                    td
-                        input(type="radio", name="handinfo[buttonpos]", value="1", checked=handinfo.buttonpos==1)
-                tr
-                    td
-                        input(type="text", name="handinfo[players][1][name]", value="Player_2")
-                    td
-                        input(type="text", name="handinfo[players][1][stack]", value="1200")
-                    td
-                        input(type="radio", name="handinfo[buttonpos]", value="2", checked=handinfo.buttonpos==2)
-
+                - var count = Number.parseInt(handinfo.playercount, 10);
+                - var i = 0;
+                while i < count
+                    tr
+                        td
+                            input(type="text", name="handinfo[players][" + i + "][name]", value=handinfo.players && handinfo.players[i] ? handinfo.players[i].name : "Player_" + (i + 1))
+                        td
+                            input(type="text", name="handinfo[players][" + i + "][stack]", value=handinfo.players && handinfo.players[i] ? handinfo.players[i].stack : handinfo.bigblind + "00")
+                        td
+                            input(type="radio", name="handinfo[buttonpos]", value=(i + 1), checked=handinfo.buttonpos == (++i))
         input(type="submit", value="Submit")
