--- a/views/new_hand/3.pug
+++ b/views/new_hand/3.pug
@@ -18,8 +18,6 @@ block content
                     td Button?
                     td Hero?
             tbody
-                - handinfo.buttonpos = handinfo.buttonpos || 1
-                - handinfo.heropos = handinfo.heropos || 1
                 - var count = Number.parseInt(handinfo.playercount, 10);
                 - var i = 0;
                 while i < count
@@ -34,3 +32,6 @@ block content
                             input(type="radio", name="handinfo[heropos]", value=(i + 1), checked=handinfo.heropos == (i + 1))
                     - i++
         input(type="submit", value="Submit")
+    hr
+    h1 Log-Result
+    pre= logResult
