--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,11 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+html(ng-app='pokerhanderfassung')
+    head
+        title= title
+        link(rel='stylesheet', href='/stylesheets/style.css')
+        script(src='/bower_components/angular/angular.js')
+        script(src='/bower_components/angular-route/angular-route.js')
+        script(src='/bower_components/angular-resource/angular-resource.js')
+        script(src='/javascripts/app.js')
+    body
+        block content
