--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,5 +7,6 @@ html(ng-app='pokerhanderfassung')
         script(src='/bower_components/angular-route/angular-route.js')
         script(src='/bower_components/angular-resource/angular-resource.js')
         script(src='/javascripts/app.js')
+        script(src='/app/view1/view1.js')
     body
         block content
